--- a/packages/httl-website/src/content/introduction/installation.mdx
+++ b/packages/httl-website/src/content/introduction/installation.mdx
@@ -3,8 +3,10 @@ import { Tabs } from 'nextra/components'
 
 # Installation
 
-Due to the active development phase, the first version of HTTL is available only as a Visual Studio Code extension.\
-However, We are actively working on a CLI version of HTTL, which will be available soon, along with a JetBrains plugin.
+> [!NOTE]
+> 
+> Due to the active development phase, the first version of HTTL is available only as a Visual Studio Code extension.
+> However, We are actively working on a CLI version of HTTL, which will be available soon, along with a JetBrains plugin.
 
 
 ## Quick Start with HTTL
