--- a/packages/httl-website/src/content/guide/directives.mdx
+++ b/packages/httl-website/src/content/guide/directives.mdx
@@ -1,33 +1,66 @@
 # Directives
  
-Let's say we have a simple script like this:
+Directives aim to extend the HTTP specification with additional features.
 
- 
+For instance, let's say you have numerous requests to the same API, such as: 
+
 ```httl
+get https://httl.dev/api/users
 
-get https://api.example.com/data
-post https://api.example.com/data
+post https://httl.dev/api/users {
+  name: "morpheus",
+  job: "leader"
+}
 
+delete https://httl.dev/api/users/1
 ```
 
-but we don't want to repeat the URL `https://api.example.com` in every request. 
-Sure we can use a globlal header `Host: api.example.com` but it's only about the host, not the full URL.
+The standard HTTP specification doesn't provide a way to encapsulate common parts of a request. 
+While we can use a global header like `Host: httl.dev`, it only specifies the host, not the full URL. 
 
-that why we need something that extends HTTP specification.
+That's why we need something that extends HTTP specification.
 
-like a directive, a way to encapsulate common parts of the request.
+This is where directives come in handy.
 
  
-```httl
+```httl {1}
+@base https://httl.dev/api
 
-@base https://api.example.com
+get /users
 
-get /data
-post /data
+post /users {
+  name: "morpheus",
+  job: "leader"
+}
 
+delete /users/1
 ```
+
+That's much better, isn't it?
+
+## Types of directives
 
 There are several directives in httl:
-- `@base` - sets the base URL for the current api
-- `@spec` - sets the OpenAPI specification for current api
-- `@auth-basic` - sets the Authentification header for current api
+- ### `@base`
+  Sets the base URL for the current Api object
+
+  ```httl 
+  @base https://httl.dev/api
+  ```
+
+
+- ### `@spec`
+  Sets the OpenAPI specification for current Api object
+
+  ```httl 
+  @spec: https://httl.dev/api/spec.json
+  ```
+
+- ### `@auth-basic`
+  Experimental directive that sets the Basic Authentification header for current Api object
+  
+  ```httl 
+  @auth-basic: username password
+  ```
+
+  will be transformed to `Authorization: Basic base64(username:password)`
