--- a/packages/httl-website/src/content/guide/header.mdx
+++ b/packages/httl-website/src/content/guide/header.mdx
@@ -1,29 +1,57 @@
-# Header
+# Headers in HTTL
 
-Header is header as simple as thtat.
+Headers follow a simple `key: value` syntax.
 
-HTe overal syntzx is 
-`key: value`
+## Syntax Rules:
 
-* the header should stay on single line
-* the value will be automatically trimmed at the beggingnin and the end
+```httl
+Content-Type: application/json
+```
+- **Single-line requirement**: Headers must be declared on a single line.
+- **Automatic trimming**: Leading/trailing whitespace in the value is automatically removed.
 
-There are two types of headers in HTTL:
-- Request header
-- Global header
+## Header Types:
 
-
-## Request header
-
-Partilyy coverd on the Request section. 
-This type of header goes right after request and belong only to this request any blank line will separate this header from the request object ant turn into glboal header
+1. **Request Headers**
+    - Apply to a specific HTTP request.
+    - Defined within a request block.
 
 
-## Global header
+2. **Global Headers**
+    - Apply to all requests in the file.
+    - Declared outside of any request block.
 
-Global header is a header that will be used in all requests below defined in the file.
+---
 
-it very convinent when you need to define common content type or authorization header etc.
+### Request header
+
+<br/>
+<i>(Partially covered in the Request section)</i>
+
+Request headers are declared immediately after a request declaration and apply only to that specific request.
+
+Example:
+
+```httl {2-4}
+get /users
+Authorization: Bearer token
+Content-Type: application/json
+Cache-Control: no-cache
+```
+
+---
+
+### Global header
+
+Global headers are automatically applied to all subsequent requests within the file.
+
+These are particularly useful for defining:
+
+- Authentication headers (e.g., `Authorization: Bearer <token>`)
+- Common content types (e.g., `Content-Type: application/json`)
+- API-wide configurations (e.g., `X-API-Version: 2.1`)
+
+Example:
 
 ```httl
 @base: https://reqres.in/api
@@ -40,7 +68,9 @@ post /users {
 
 ```
 
+---
 
-global heeader can be defined in any palce and can owweride each other
-
-Headers will be sent in lover case in accordance with the HTTP specification, -  link to spec
+> [!NOTE]
+> 
+> Headers are sent in lowercase in accordance with the [HTTP specification](https://datatracker.ietf.org/doc/html/rfc7540#section-8.1.2).
+>
