refactor: remove obsolete 'use' section and dot-httl documentation, enhance module system explanation in guide

--- a/packages/httl-website/src/content/guide/testing.mdx
+++ b/packages/httl-website/src/content/guide/testing.mdx
@@ -1,7 +1,10 @@
 # Testing
  
-Httl provides a simple way to test your API requests. 
-All you need to do it to add `assert`to the end of your request.
+HTTL provides a simple way to test your API requests.
+
+**Note:** This feature is still in development, and we will be adding more functionalities in the future.
+
+All you need to do is add `assert` to the end of your request.
 
 
 ```httl
@@ -20,5 +23,13 @@ assert {
 }
 ```
 
-The `assert` block can check the response status, headers, and body.
-NOTE - so far we support only Strict Equality for all elements. But as we grow, we will add more options.
+There are three main elements in the `assert` block:
+
+- `status`
+- `headers`
+- `body`
+
+
+> [!NOTE]
+>
+> So far, we support only strict equality for all elements. However, as we continue to grow, we will add more comparison options.
