--- a/packages/httl-website/src/content/guide/module.mdx
+++ b/packages/httl-website/src/content/guide/module.mdx
@@ -1,6 +1,15 @@
 import { FileTree } from 'nextra/components'
 
-# Api Object
+# Module System
+
+Like any other programming language, HTTL has a module system.
+You can import modules and utilize their context within your files.
+
+There are two main components in the module system:
+- [API Object](#api-object)
+- [Use statement](#use)
+
+## Api Object
 
 HTTL introduces the concept of the `API` object — a virtual entity that acts as a centralized container for global headers, directives, and variables defined within a file.
 
@@ -42,19 +51,12 @@ get /users # https://httl.dev/api/users
 get /users # https://httl.dev/api/v2/users
 ```
 
-## Import
+## Use
 
-When you import a file, the API object of the imported file is merged with the current API object.
+Now, let's move from the virtual to the real.  
+You can import another module using the `use` keyword.
 
-We will cover this in more detail on the [Use page](./use)
-
-
-# Use
-
-As any other programming language, HTTL has a module system. 
-You can import modules and use their functions in your queries.
-
-let's say you have a module called `auth.httl` with the following content:
+Suppose you have a module named `auth.httl` with the following content:
 
 ```httl filename="auth.httl"
 @spec: https://httl.dev/api/spec.json
@@ -67,7 +69,7 @@ Authorization: Bearer {auth.token}
 
 ```
 
-now you can import this module in your query like this:
+Now you can import this module in your file like this:
 
 ```httl filename="user-creation-test.httl" {1}
 use './auth.httl'
@@ -81,16 +83,23 @@ put /users/1 {
 }
 
 delete /users/1 
-
 ```
 
-by using `use './auth.httl'` noth `put` and `delete` requests will have the `Authorization` header set to `Bearer {auth.token}` that was defined in the `auth.httl` module.
-Also you will have intellisense for the requests 
+**Note:** Both `PUT` and `DELETE` requests require the `Authorization` header.
+
+Because we import the `auth.httl` file, the API object from that file is merged with the current API object, and `Authorization: Bearer {auth.token}` becomes part of your global headers.  
+It's as if you copy-pasted the content of the `auth.httl` file into the `user-creation-test.httl` file.
+
+> [!TIP]
+>
+> It's good practice to keep your authorization and other preparatory requests in a separate file, keeping your main module clean and easy to read.
+>
+
 
 ### Module resolution
 
-The module path is resolved relative to the current file. mostly like in Javascript. 
-so let say we have this structure:
+The module path is resolved relative to the current file, much like in JavaScript.  
+So, let's say we have the following structure:
  
 <FileTree>
   <FileTree.Folder name="src" defaultOpen>
@@ -104,8 +113,52 @@ so let say we have this structure:
 </FileTree>
 
 
-and in the `user-creation-test.httl` file you want to import the `auth.httl` module you can do it like this:
+To import the `auth.httl` module in the `user-creation-test.httl` file, you can do it like this:
 
 ```httl
 use '../modules/auth.httl'
+```
+
+## Default .httl file
+
+Remember that the main idea of the language is simplicity and readability.
+That's why we have a feature called the default `.httl` file.
+
+This file will be imported into every file by default.
+
+<FileTree>
+  <FileTree.Folder name="src" defaultOpen>
+    <FileTree.Folder name="modules" defaultOpen>
+      <FileTree.File name="auth.httl" />
+    </FileTree.Folder>
+    <FileTree.Folder name="tests" defaultOpen>
+      <FileTree.File name="user-creation-test.httl" />
+    </FileTree.Folder>
+    <FileTree.File name=".httl" active />
+  </FileTree.Folder>
+</FileTree>
+
+It's a great place to put your global headers, directives, and variables that you want to apply to all your files.
+
+```httl filename=".httl"
+@spec: https://httl.dev/api/spec.json
+@auth-basic: admin admin
+
+post /auth 
+ as auth
+
+Authorization: Bearer {auth.token}
+```
+
+Now, every file will have the `@spec` and `Authorization: Bearer {auth.token}` by default.
+
+```httl filename="user-creation-test.httl"
+put /users/1 {
+  username: "jdoe_admin",
+  firstName: "John Admin",
+  lastName: "Doe Admin",
+  admin: true
+}
+
+delete /users/1
 ```
