chore: update package version to 0.1.5, refine CSS styles, and enhance navigation structure

--- a/packages/httl-website/src/content/introduction/why.mdx
+++ b/packages/httl-website/src/content/introduction/why.mdx
@@ -1,3 +1,5 @@
+import { Bleed } from 'nextra/components'
+
 # What was the motivation behind creating HTTL?
  
 Well, that’s actually a good question: why create a new language for something relatively simple, especially when so many good tools already exist?
@@ -24,6 +26,5 @@ As usual, each tool has its own benefits and drawbacks, and after a long search 
 
 All of this led me to the idea of creating this language because I believe there's no better tool than code that runs other code.
 
-> I’ve stopped using Postman since the beginning of 2025.
 
- (checkout my video how to replace Postman with HTTL **put_link_link**) 
+> I’ve stopped using Postman since the beginning of 2025. :)
