Updated shortcut labels for Mac

--- a/packages/httl-website/src/content/guide/openapi.mdx
+++ b/packages/httl-website/src/content/guide/openapi.mdx
@@ -20,7 +20,7 @@ To integrate an OpenAPI specification file, simply add the @spec directive with 
 ```httl
 @spec: https://httl.dev/api/spec.json
 
-get <type '/' or press CMD|Ctrl+Space to see the list of available paths>
+get <type '/' or press Ctrl+Space | Option+Esc to see the list of available paths>
 ```
 
 ### IntelliSense
@@ -45,7 +45,7 @@ To utilize this feature:
 
 ---
 
-You can also use `CMD|Ctrl+Space` to see the list of available body schema.
+You can also use `Ctrl+Space | Option+Esc` to see the list of available body schema.
 
 > [!TIP]
 >
