Update installation instructions to use 'httl-cli' instead of 'httl'

--- a/packages/httl-website/src/content/cli/index.mdx
+++ b/packages/httl-website/src/content/cli/index.mdx
@@ -14,7 +14,7 @@ HTTL CLI is available as a global package on npm. You need to have Node.js versi
 To install the CLI, run the following command:
 
 ```bash
-npm install httl -g
+npm install httl-cli -g
 ```
 
 ## Usage
