--- a/packages/httl-website/src/content/introduction/installation.mdx
+++ b/packages/httl-website/src/content/introduction/installation.mdx
@@ -14,7 +14,7 @@ import { Tabs } from 'nextra/components'
   </Tabs.Tab>
   <Tabs.Tab>
     ```bash
-    npm install httl -g
+    npm install httl-cli -g
     ```
   </Tabs.Tab>
   <Tabs.Tab>
