Add global styles, update project metadata, and enhance release notes; remove outdated file documentation

--- a/packages/httl-website/src/content/httl-project/index.mdx
+++ b/packages/httl-website/src/content/httl-project/index.mdx
@@ -1,24 +1,20 @@
 # HTTL PROJECT
- 
-Starting from version 0.1.7, HTTL provides a command-line interface (CLI) that allows you to run HTTL queries from the terminal. 
-HTTL CLI is a great way to run HTTL queries in a CI/CD pipeline or to integrate them into your existing automation scripts.
 
-#### HTTL CLI supports all the features of the HTTL language and also provides formatted and colorized terminal output
-<br />
-<img src="/images/cli-example.png" alt="CLI Example" />
 
-## Installation
+<iframe
+  src="https://codesandbox.io/embed/swr-states-4une7"
+  width="100%"
+  height="500px"
+  title="SWR-States"
+/>
 
-HTTL CLI is available as a global package on npm. You need to have Node.js version 18.00 or later.
+**HTTL PROJECT** is convinient way to organazie the requests based on an OpenApi specification of your project. 
 
-To install the CLI, run the following command:
+Let's say you have OpenApi spefication URL you can post geenrated  HTTL code for each of the endpoint 
+- put a gif here - 
 
-```bash
-npm install httl-cli -g
-```
+If you don't have it  you can generate it from the existing code base 
+- put a gif here - 
 
-## Usage
-
-There are two ways to run an HTTL query from the terminal:
-- [Run a query from the command line](./cli/request)
-- [Run a query from a file](./cli/file)
+HTTL uses native VScode Copilot model to scan your project and generaed OpenApi specification on a fly
+now we support - put a list of projects
