Add ColoredText and ReleaseLabel components; update home page layout and styles

--- a/packages/httl-website/src/content/httl-project/index.mdx
+++ b/packages/httl-website/src/content/httl-project/index.mdx
@@ -1,6 +1,10 @@
 # HTTL PROJECT
 
 
+<iframe 
+width="100%" style={{ aspectRatio: '16/9' }} src="https://www.youtube.com/embed/jcrYqkPjJQs?si=wed619u1cX-9dvFk" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerPolicy="strict-origin-when-cross-origin" allowFullScreen>
+</iframe>
+
 
 **HTTL PROJECT** is convinient way to organazie the requests based on an OpenApi specification of your project. 
 
