Fix punctuation inconsistencies in documentation; replace em dashes with hyphens for uniformity across multiple files

--- a/packages/httl-website/src/content/guide/index.mdx
+++ b/packages/httl-website/src/content/guide/index.mdx
@@ -1,6 +1,6 @@
 # The Basics
  
-### Enough talk — show me the code!
+### Enough talk - show me the code!
  
 ```httl copy
     # Define a base URL for all requests
