--- a/packages/httl-website/src/content/guide/request.mdx
+++ b/packages/httl-website/src/content/guide/request.mdx
@@ -26,7 +26,7 @@ assert {
 ```
 
 ## Request line
-The first line combines the verb and the path — again, no surprise there.
+The first line combines the verb and the path - again, no surprise there.
 Both the verb and path should appear on the same line. For simplicity, all verbs are written in lowercase in HTTL but are sent in uppercase.
 
 Below is the list of all verbs supported by HTTL:
