--- a/packages/httl-website/src/content/guide/module.mdx
+++ b/packages/httl-website/src/content/guide/module.mdx
@@ -11,7 +11,7 @@ There are two main components in the module system:
 
 ## Api Object
 
-HTTL introduces the concept of the `API` object — a virtual entity that acts as a centralized container for global headers, directives, and variables defined within a file.
+HTTL introduces the concept of the `API` object - a virtual entity that acts as a centralized container for global headers, directives, and variables defined within a file.
 
 > [!NOTE]
 >
