--- a/packages/httl-website/src/content/httl-project/index.mdx
+++ b/packages/httl-website/src/content/httl-project/index.mdx
@@ -1,18 +1,69 @@
 # HTTL PROJECT
 
+✅ **HTTL Project** is a convenient way to organize requests based on an OpenAPI specification - either imported directly or generated automatically by GitHub Copilot.
+
+## There are two ways to create an HTTL project
+
+### 1️⃣ Generate it from the existing code base
+
+HTTL uses the native GitHub Copilot model in VS Code to scan your project and generate an OpenAPI specification on the fly.
+It’s best to watch the video below to see it in action.
+
+<br/>
 
 <iframe 
-width="100%" style={{ aspectRatio: '16/9' }} src="https://www.youtube.com/embed/jcrYqkPjJQs?si=wed619u1cX-9dvFk" title="YouTube video player" frameBorder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerPolicy="strict-origin-when-cross-origin" allowFullScreen>
+  width="100%" 
+  style={{ aspectRatio: '16/9' }} 
+  src="https://www.youtube.com/embed/DIqXXu8YENo" 
+  title="YouTube video player" 
+  frameBorder="0" 
+  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+  referrerPolicy="strict-origin-when-cross-origin" 
+  allowFullScreen>
 </iframe>
 
 
-**HTTL PROJECT** is convinient way to organazie the requests based on an OpenApi specification of your project. 
+### 2️⃣ Import OpenApi specification from URL
 
-Let's say you have OpenApi spefication URL you can post geenrated  HTTL code for each of the endpoint 
-- put a gif here - 
+If you already have an OpenAPI specification, you can import it into your HTTL project with just a few clicks.
+Just open the **HTTL Project** view, click the **Project ComboBox**, and paste the URL of your OpenAPI specification.
 
-If you don't have it  you can generate it from the existing code base 
-- put a gif here - 
+<br/>
 
-HTTL uses native VScode Copilot model to scan your project and generaed OpenApi specification on a fly
-now we support - put a list of projects
+<img 
+  src="/images/vscode-httl-project-openapi-spec-url.png" 
+  alt="HTTL Project OpenApi Spec URL" 
+  style={{ width: '100%', maxWidth: '500px', margin: '0 auto' }}
+/>
+
+It automatically generates HTTL queries for you - and you’re ready to go!
+
+<br/>
+
+<img 
+  src="/images/vscode-httl-project-openapi-spec-url-imported.png" 
+  alt="HTTL Project OpenApi Spec URL Imported" 
+  style={{ width: '100%', maxWidth: '500px', margin: '0 auto' }}
+/>
+
+## Realistic Body Generator
+
+Yes… how could we not include this?
+
+By default, HTTL automatically generates a stub request body based on your OpenAPI schema.
+
+<br/>
+
+<img 
+  src="/images/vscode-httl-project-realistic-body.png" 
+  alt="HTTL Project OpenApi Spec URL Realistic Body" 
+  style={{ width: '100%', maxWidth: '500px', margin: '0 auto' }}
+/>
+
+Now you can enhance it with realistic data — powered by Copilot and triggered with just one little button.
+
+<img 
+  src="/images/vscode-httl-project-body-ai.png" 
+  alt="HTTL Project Body AI"
+  style={{ width: '100%', maxWidth: '500px', margin: '0 auto' }}
+/>
