--- a/packages/httl-website/src/content/introduction/contributing.mdx
+++ b/packages/httl-website/src/content/introduction/contributing.mdx
@@ -1,6 +1,6 @@
 # Feedback & Contributing
  
-Yes, please! More feedback, more contributions, more ideas—bring it all!
+Yes, please! More feedback, more contributions, more ideas - bring it all!
 I already have plenty of items on the roadmap, but I’m sure there are many things I haven’t thought of yet.
 
 So if you have any feedback, ideas, or contributions, don’t hesitate to reach out. I’m always happy to hear from you!
@@ -8,5 +8,6 @@ So if you have any feedback, ideas, or contributions, don’t hesitate to reach 
 ## You can reach me on:
 
 - [GitHub](https://github.com/httl-lang/HTTL)
+- [Twitter (X)](https://x.com/HTTL_lang)
 - [BlueSky](https://bsky.app/profile/httl-lang.bsky.social)
 - [Discrod](https://discord.gg/hC6BTWTJ)
