Update documentation and UI text for clarity; specify GitHub Copilot in release note and enhance project description

--- a/packages/httl-website/src/content/httl-project/index.mdx
+++ b/packages/httl-website/src/content/httl-project/index.mdx
@@ -60,7 +60,11 @@ By default, HTTL automatically generates a stub request body based on your OpenA
   style={{ width: '100%', maxWidth: '500px', margin: '0 auto' }}
 />
 
-Now you can enhance it with realistic data — powered by Copilot and triggered with just one little button.
+<br/>
+
+Now you can enhance it with realistic data - powered by Copilot and triggered with just one little button.
+
+<br/>
 
 <img 
   src="/images/vscode-httl-project-body-ai.png" 
