Update Discord link in navigation and contributing documentation

--- a/packages/httl-website/src/content/introduction/contributing.mdx
+++ b/packages/httl-website/src/content/introduction/contributing.mdx
@@ -10,4 +10,4 @@ So if you have any feedback, ideas, or contributions, don’t hesitate to reach 
 - [GitHub](https://github.com/httl-lang/HTTL)
 - [Twitter (X)](https://x.com/HTTL_lang)
 - [BlueSky](https://bsky.app/profile/httl-lang.bsky.social)
-- [Discrod](https://discord.gg/hC6BTWTJ)
+- [Discrod](https://discord.gg/rAuRY4yF55)
